@@ -30,6 +30,9 @@
        fs.gs.system.bucket
        fs.gs.system.bucket.create
 
+  12. Remove obsoletet `fs.gs.performance.cache.dir.metadata.prefetch.limit`
+      property.
+
 
 1.9.14 - 2019-02-13
 
